--- a/ios/Makefile.ios
+++ b/ios/Makefile.ios
@@ -1,22 +1,24 @@
 PNG_NAME        := libpng-1.6.34
-JPEG_SRC_NAME   := jpegsrc.v9a# filename at the server
-JPEG_DIR_NAME   := jpeg-9a# folder name after the JPEG_SRC_NAME archive has been unpacked
+JPEG_SRC_NAME   := jpegsrc.v9c
+# folder name after the JPEG_SRC_NAME archive has been unpacked
+JPEG_DIR_NAME   := jpeg-9c
 TIFF_NAME       := tiff-4.0.9
 
+PLATFORM_PREFIX=ios
 SDK_IPHONEOS_PATH=$(shell xcrun --sdk iphoneos --show-sdk-path)
 SDK_IPHONESIMULATOR_PATH=$(shell xcrun --sdk iphonesimulator --show-sdk-path)
 XCODE_DEVELOPER_PATH="`xcode-select -p`"
 XCODETOOLCHAIN_PATH=$(XCODE_DEVELOPER_PATH)/Toolchains/XcodeDefault.xctoolchain
-IOS_DEPLOY_TGT="7.0"
+IOS_DEPLOY_TGT="8.0"
 
 IMAGE_SRC = $(shell pwd)
 PNG_SRC   = $(IMAGE_SRC)/$(PNG_NAME)
 JPEG_SRC = $(IMAGE_SRC)/$(JPEG_DIR_NAME)
 TIFF_SRC = $(IMAGE_SRC)/$(TIFF_NAME)
 
-IMAGE_LIB_DIR = $(shell pwd)/dependencies/lib/
-IMAGE_INC_DIR = $(shell pwd)/dependencies/include/
-LIB_FAT_DIR   = $(shell pwd)/dependencies/lib
+IMAGE_LIB_DIR = $(shell pwd)/dependencies/$(PLATFORM_PREFIX)/lib/
+IMAGE_INC_DIR = $(shell pwd)/dependencies/$(PLATFORM_PREFIX)/include/
+LIB_FAT_DIR   = $(shell pwd)/dependencies/$(PLATFORM_PREFIX)/lib
 
 libpngfiles = libpng.a
 libjpegfiles = libjpeg.a
@@ -66,77 +68,77 @@ all : $(dependant_libs)
 libtiff : $(libtifffat)
 
 $(libtifffat) : $(libtiff)
-	mkdir -p $(@D)
-	xcrun lipo $(realpath $(addsuffix lib/$(@F), $(libtifffolders_all)) ) -create -output $@
-	mkdir -p $(IMAGE_INC_DIR)
-	cp -rvf $(firstword $(libtifffolders))/include/*.h $(IMAGE_INC_DIR)
+  mkdir -p $(@D)
+  xcrun lipo $(realpath $(addsuffix lib/$(@F), $(libtifffolders_all)) ) -create -output $@
+  mkdir -p $(IMAGE_INC_DIR)
+  cp -rvf $(firstword $(libtifffolders))/include/*.h $(IMAGE_INC_DIR)
 
 $(libtiff) :  $(libtiffmakefile)
-	cd $(abspath $(@D)/..) ; \
-	$(MAKE) -sj8 && $(MAKE) install
+  cd $(abspath $(@D)/..) ; \
+  $(MAKE) -sj8 && $(MAKE) install
 
 $(TIFF_SRC)/%/Makefile : $(libtiffconfig)
-	export SDKROOT="$(call swap, $*, $(arch_names_all), $(sdks))" ; \
-	export CFLAGS="-Qunused-arguments -arch $(call swap, $*, $(arch_names_all), $(archs_all)) -pipe -no-cpp-precomp -isysroot $$SDKROOT -miphoneos-version-min=$(IOS_DEPLOY_TGT) -O2 -fembed-bitcode" ; \
-	export CPPFLAGS=$$CFLAGS ; \
-	export CXXFLAGS="$$CFLAGS -Wno-deprecated-register"; \
-	mkdir -p $(@D) ; \
-	cd $(@D) ; \
-	../configure --host=$* --enable-fast-install --enable-shared=no --prefix=`pwd` --without-x --with-jpeg-include-dir=$(abspath $(@D)/../../$(JPEG_DIR_NAME)/$*/include) --with-jpeg-lib-dir=$(abspath $(@D)/../../$(JPEG_DIR_NAME)/$*/lib)
+  export SDKROOT="$(call swap, $*, $(arch_names_all), $(sdks))" ; \
+  export CFLAGS="-Qunused-arguments -arch $(call swap, $*, $(arch_names_all), $(archs_all)) -pipe -no-cpp-precomp -isysroot $$SDKROOT -miphoneos-version-min=$(IOS_DEPLOY_TGT) -O2 -fembed-bitcode" ; \
+  export CPPFLAGS=$$CFLAGS ; \
+  export CXXFLAGS="$$CFLAGS -Wno-deprecated-register"; \
+  mkdir -p $(@D) ; \
+  cd $(@D) ; \
+  ../configure --host=$* --enable-fast-install --enable-shared=no --prefix=`pwd` --without-x --with-jpeg-include-dir=$(abspath $(@D)/../../$(JPEG_DIR_NAME)/$*/include) --with-jpeg-lib-dir=$(abspath $(@D)/../../$(JPEG_DIR_NAME)/$*/lib)
 
 libpng : $(libpngfat)
 
 $(libpngfat) : $(libpng)
-	mkdir -p $(@D)
-	xcrun lipo $(realpath $(addsuffix lib/$(@F), $(libpngfolders_all)) ) -create -output $@
-	mkdir -p $(IMAGE_INC_DIR)
-	cp -rvf $(firstword $(libpngfolders))/include/*.h $(IMAGE_INC_DIR)
+  mkdir -p $(@D)
+  xcrun lipo $(realpath $(addsuffix lib/$(@F), $(libpngfolders_all)) ) -create -output $@
+  mkdir -p $(IMAGE_INC_DIR)
+  cp -rvf $(firstword $(libpngfolders))/include/*.h $(IMAGE_INC_DIR)
 
 $(libpng) : $(libpngmakefile)
-	cd $(abspath $(@D)/..) ; \
-	$(MAKE) -sj8 && $(MAKE) install
+  cd $(abspath $(@D)/..) ; \
+  $(MAKE) -sj8 && $(MAKE) install
 
 $(PNG_SRC)/%/Makefile : $(libpngconfig)
-	export SDKROOT="$(call swap, $*, $(arch_names_all), $(sdks))" ; \
-	export CFLAGS="-Qunused-arguments -arch $(call swap, $*, $(arch_names_all), $(archs_all)) -pipe -no-cpp-precomp -isysroot $$SDKROOT -miphoneos-version-min=$(IOS_DEPLOY_TGT) -O2 -fembed-bitcode" ; \
-	export CPPFLAGS=$$CFLAGS ; \
-	export CXXFLAGS="$$CFLAGS -Wno-deprecated-register"; \
-	mkdir -p $(@D) ; \
-	cd $(@D) ; \
-	../configure --host=$* --enable-shared=no --prefix=`pwd`
+  export SDKROOT="$(call swap, $*, $(arch_names_all), $(sdks))" ; \
+  export CFLAGS="-Qunused-arguments -arch $(call swap, $*, $(arch_names_all), $(archs_all)) -pipe -no-cpp-precomp -isysroot $$SDKROOT -miphoneos-version-min=$(IOS_DEPLOY_TGT) -O2 -fembed-bitcode" ; \
+  export CPPFLAGS=$$CFLAGS ; \
+  export CXXFLAGS="$$CFLAGS -Wno-deprecated-register"; \
+  mkdir -p $(@D) ; \
+  cd $(@D) ; \
+  ../configure --host=$* --enable-shared=no --prefix=`pwd`
 
 libjpeg : $(libjpegfat)
 
 $(libjpegfat) : $(libjpeg)
-	mkdir -p $(@D)
-	xcrun lipo $(realpath $(addsuffix lib/$(@F), $(libjpegfolders_all)) ) -create -output $@
-	mkdir -p $(IMAGE_INC_DIR)
-	cp -rvf $(firstword $(libjpegfolders))/include/*.h $(IMAGE_INC_DIR)
+  mkdir -p $(@D)
+  xcrun lipo $(realpath $(addsuffix lib/$(@F), $(libjpegfolders_all)) ) -create -output $@
+  mkdir -p $(IMAGE_INC_DIR)
+  cp -rvf $(firstword $(libjpegfolders))/include/*.h $(IMAGE_INC_DIR)
 
 $(libjpeg) : $(libjpegmakefile)
-	cd $(abspath $(@D)/..) ; \
-	$(MAKE) -sj8 && $(MAKE) install
+  cd $(abspath $(@D)/..) ; \
+  $(MAKE) -sj8 && $(MAKE) install
 
 $(JPEG_SRC)/%/Makefile : $(libjpegconfig)
-	export SDKROOT="$(call swap, $*, $(arch_names_all), $(sdks))" ; \
-	export CFLAGS="-Qunused-arguments -arch $(call swap, $*, $(arch_names_all), $(archs_all)) -pipe -no-cpp-precomp -isysroot $$SDKROOT -miphoneos-version-min=$(IOS_DEPLOY_TGT) -O2 -fembed-bitcode" ; \
-	export CPPFLAGS=$$CFLAGS ; \
-	export CXXFLAGS="$$CFLAGS -Wno-deprecated-register"; \
-	mkdir -p $(@D) ; \
-	cd $(@D) ; \
-	../configure --host=$* --enable-shared=no --prefix=`pwd`
+  export SDKROOT="$(call swap, $*, $(arch_names_all), $(sdks))" ; \
+  export CFLAGS="-Qunused-arguments -arch $(call swap, $*, $(arch_names_all), $(archs_all)) -pipe -no-cpp-precomp -isysroot $$SDKROOT -miphoneos-version-min=$(IOS_DEPLOY_TGT) -O2 -fembed-bitcode" ; \
+  export CPPFLAGS=$$CFLAGS ; \
+  export CXXFLAGS="$$CFLAGS -Wno-deprecated-register"; \
+  mkdir -p $(@D) ; \
+  cd $(@D) ; \
+  ../configure --host=$* --enable-shared=no --prefix=`pwd`
 
 #######################
 # Download sources
 #######################
 $(libtiffconfig) :
-	curl http://download.osgeo.org/libtiff/$(TIFF_NAME).tar.gz | tar -xpf-
+  curl ftp://download.osgeo.org/pub/libtiff/$(TIFF_NAME).tar.gz | tar -xpf-
 
 $(libjpegconfig) :
-	curl http://www.ijg.org/files/$(JPEG_SRC_NAME).tar.gz | tar -xpf-
+  curl http://www.ijg.org/files/$(JPEG_SRC_NAME).tar.gz | tar -xpf-
 
 $(libpngconfig) :
-	curl https://ftp-osl.osuosl.org/pub/libpng/src/libpng16/$(PNG_NAME).tar.gz | tar -xpf-
+	curl -L https://downloads.sourceforge.net/project/libpng/libpng16/1.6.36/libpng-1.6.36.tar.gz | tar -xpf-
 
 #######################
 # Clean
@@ -146,21 +148,21 @@ clean : cleanpng cleantiff cleanjpeg
 
 .PHONY : cleanpng
 cleanpng :
-	for folder in $(realpath $(libpngfolders_all) ); do \
+  for folder in $(realpath $(libpngfolders_all) ); do \
         cd $$folder; \
         $(MAKE) clean; \
-	done
+  done
 
 .PHONY : cleanjpeg
 cleanjpeg :
-	for folder in $(realpath $(libjpegfolders_all) ); do \
+  for folder in $(realpath $(libjpegfolders_all) ); do \
         cd $$folder; \
         $(MAKE) clean; \
-	done
+  done
 
 .PHONY : cleantiff
 cleantiff :
-	for folder in $(realpath $(libtifffolders_all) ); do \
+  for folder in $(realpath $(libtifffolders_all) ); do \
         cd $$folder; \
         $(MAKE) clean; \
     done
@@ -170,29 +172,29 @@ mostlyclean : mostlycleanpng mostlycleantiff mostlycleanjpeg
 
 .PHONY : mostlycleanpng
 mostlycleanpng :
-	for folder in $(realpath $(libpngfolders) ); do \
+  for folder in $(realpath $(libpngfolders) ); do \
         cd $$folder; \
         $(MAKE) mostlyclean; \
     done
 
 .PHONY : mostlycleantiff
 mostlycleantiff :
-	for folder in $(realpath $(libtifffolders_all) ); do \
+  for folder in $(realpath $(libtifffolders_all) ); do \
         cd $$folder; \
         $(MAKE) mostlyclean; \
-	done
+  done
 
 .PHONY : mostlycleanjpeg
 mostlycleanjpeg :
-	for folder in $(realpath $(libjpegfolders_all) ); do \
+  for folder in $(realpath $(libjpegfolders_all) ); do \
         cd $$folder; \
         $(MAKE) mostlyclean; \
     done
 
 .PHONY : distclean
 distclean :
-	-rm -rf $(IMAGE_LIB_DIR)
-	-rm -rf $(IMAGE_INC_DIR)
-	-rm -rf $(PNG_SRC)
-	-rm -rf $(JPEG_SRC)
-	-rm -rf $(TIFF_SRC)
+  -rm -rf $(IMAGE_LIB_DIR)
+  -rm -rf $(IMAGE_INC_DIR)
+  -rm -rf $(PNG_SRC)
+  -rm -rf $(JPEG_SRC)
+  -rm -rf $(TIFF_SRC)
